--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "dev": "tsc -w",
     "prepublishOnly": "npm run build",
+    "postversion": "npm run build && git push && git push --tags && npm publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
